--- a/client-side/index.html
+++ b/client-side/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jackr Mystery Educator</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header"></div>
+        <div id="app">
+          <h1>Jackr Enterprises</h1>
+          <h3>Mystery Educator</h3>
+        </div>
+        <div class="footer"></div>
+      </div>
     <script src="./js/index.js"></script>
 </body>
 </html>
