--- a/client-side/index.html
+++ b/client-side/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <div class="header"></div>
         <div id="app">
-          <h1>Jackr Enterprises</h1>
-          <h3>Mystery Educator</h3>
+            <h1>Jackr Enterprises</h1>
+            <h3>Mystery Educator</h3>
+            <p>Different text to show this is working the way it should</p>
         </div>
         <div class="footer"></div>
       </div>
