--- a/client-side/index.html
+++ b/client-side/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
-    <title>Jackr Mystery Educator</title>
-</head>
-<body>
-    <div class="container">
-        <div class="header"></div>
-        <div id="app">
-            <h1>Jackr Enterprises</h1>
-            <h3>Mystery Educator</h3>
-            <p>Different text to show this is working the way it should</p>
-        </div>
-        <div class="footer"></div>
-      </div>
-    <script src="./js/index.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/css/style.css" type="text/css" />
+		<title>Jackr Mystery Educator</title>
+	</head>
+	<body>
+		<div class="container">
+			<div class="header"></div>
+			<div id="app">
+				<h1>Jackr Enterprises</h1>
+				<h3>Mystery Educator</h3>
+				<p>Different text to show this is working the way it should</p>
+			</div>
+			<div class="footer"></div>
+		</div>
+		<script src="./js/index.js"></script>
+	</body>
 </html>
