--- a/client-side/index.html
+++ b/client-side/index.html
@@ -10,10 +10,12 @@
 <body>
     <div class="container">
         <div class="header"></div>
-        <div id="app">
+        <div class="homePage__container" id="app">
           <h1>Jackr Enterprises</h1>
           <h3>Mystery Educator</h3>
-          <p>Different text to show this is working the way it should</p>
+          
+          <p>To indicate the page has changed. NEEDS TO BE REMOVED BEFORE SUBMISSION</p>
+        <p> At JacKr Trekr we understand that family is important. We would like to present you <span class="home__span">JacKr Enterprises Mystery Educator.</span> For kids from the age of 6 to 13 we have come up with a fun and educational way to help them learn about various aspects of <span class="home__span">Science, Art, and History.</span> Click on the Art button to be taken on an exploration of the various art offered at the MET Museum. Click on the Science button to be wowed by NASA. Click on the History button to be taken on a tour of the Wonders of the World. Click on the Games button for a chance to win cool prizes</p>
         </div>
         <div class="footer"></div>
       </div>
