--- a/client-side/index.html
+++ b/client-side/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<div class="container">
 			<div class="header"></div>
+            <div class="artDepartments"></div>
 			<div id="app">
 				<h1>Jackr Enterprises</h1>
 				<h3>Mystery Educator</h3>
