tried to connect Contact Page

--- a/client-side/index.html
+++ b/client-side/index.html
@@ -22,6 +22,7 @@
 	<body>
 		<div class="container">
 			<div class="header"></div>
+			<a href="/ContactJackr.html">contact us</a>
 			<div class="homePage__container" id="app">
 				<h1>Jackr Enterprises</h1>
 				<h3>Mystery Educator</h3>
