Got contact us button to work

--- a/client-side/ContactJackr.html
+++ b/client-side/ContactJackr.html
@@ -35,7 +35,7 @@
             <ul>
                 <li>
                     <div class="card">
-                        <img src="./assets/images/redsea-1-1024x768.jpg" alt="">
+                        <img src="./images/redsea-1-1024x768.jpg" alt="">
                         <div class="card-content">
                             <h3 class="card-title">EYA!&#8482</h3>
                             <p>Own an aquarium?  Enjoy visiting major aquariums? Love to visit the tropical fish store?  This adventure is all 3 of those questions...<strong>LIVE AND IN LIVING COLOR!</strong> So come Enjoy Your Aquarium!...EYA!&#8482</p>
@@ -44,7 +44,7 @@
                 </li>
                 <li>
                     <div class="card">
-                        <img src="./assets/images/cavern.jpg" alt="" srcset="">
+                        <img src="./images/cavern.jpg" alt="" srcset="">
                         <div class="card-content">
                             <h3 class="card-title">Spelunking!&#8482</h3>
                             <p>Sure.  The tourist caves are beautiful, fun, and unique to visit.  But why do the tourist thing when you can tame the wilds and mark new paths for future tourists to follow.</p>
@@ -53,7 +53,7 @@
                 </li>
                 <li>
                     <div class="card">
-                        <img src="./assets/images/trek-to-k2-2.jpg" alt="" srcset="">
+                        <img src="./images/trek-to-k2-2.jpg" alt="" srcset="">
                         <div class="card-content">
                             <h3 class="card-title">JT,B!&#8482</h3>
                             <p>"Just Trek Baby!&#8482" is what we say here at JacKr.  Come test your fortitude with treks that make you forget that the word civilization even exists. </p>
